--- a/SCHED.html
+++ b/SCHED.html
@@ -75,7 +75,7 @@
              </tr>
             <tr>
                 <td>2:00-3:00</td>
-                <td class="db" rowspan="3">ITEP204|MS.ESCOTE|<br>LAB 4</td>
+                <td class="db" rowspan="3">ITEP204|MS.ESCOTE|<br>&lt;LAB 4&gt;</td>
                 <td></td>
                 <td></td>
                 <td></td>
