--- a/SCHED.html
+++ b/SCHED.html
@@ -51,7 +51,7 @@
                 <td>10:00-11:00</td>
                 <td class="mack">ITEP206|MR.DEL ROSARIO|<br>GMEET</td>
                 <td></td>
-                <td class="db">ITEP204|MS.ESCOTE|<br>&lt;LAB 4 &gt;</td>
+                <td class="db">ITEP204|MS.ESCOTE|<br>GMEET</td>
                 <td></td>
              </tr>
             <tr>
@@ -75,7 +75,7 @@
              </tr>
             <tr>
                 <td>2:00-3:00</td>
-                <td class="db" rowspan="3">ITEP204|MS.ESCOTE|<br>LAB 4</td>
+                <td class="db" rowspan="3">ITEP204|MS.ESCOTE|<br>&lt;LAB 4 &gt;</td>
                 <td></td>
                 <td></td>
                 <td></td>
